# antennaknobs

./: .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  LICENSE  NEXT_STEPS.md  README.md  compose.yaml  data.json  fly.toml  pyproject.toml
.claude/skills/release/: SKILL.md
.github/scripts/: wheel_solve_smoke.py
.github/workflows/: deploy-docs.yml  docker-dev-image.yml  docker-publish.yml  fly-deploy.yml  publish.yml  ruff.yml  test.yml
docs/: deploy.md  market-research-antenna-simulators.md  plan-abortable-solves.md  plan-catalog-scaling.md  plan-cross-session-pins.md  plan-directivity-norm-followup.md  plan-mna-network-core.md  plan-mobile-layout-mode.md  plan-network-impedance-readout.md  plan-variant-overlay.md  plan-ws-latest-wins.md  website-content-plan.md
docs/ad/: .gitignore  README.md  _adkit.py  generate_cycling.py
docs/status/: 2026-07-04-ws-postproc-serialization-profile.md  2026-07-08-ground-model-benchmark.md  2026-07-11-station-loss-comparison.md  2026-07-12-wire-loading-runtime-study.md  2026-07-15-per-wire-specs-design.md  2026-07-15-single-lane-scheduler-design.md  2026-07-16-nec2c-corpus-benchmark.md  2026-07-16-wild-corpus-parse-census.md  2026-07-17-wild-corpus-solve-sweep.md  2026-07-18-quad-convergence-anchor.md  2026-07-19-catalog-perf-benchmark.csv  2026-07-19-catalog-perf-benchmark.html  2026-07-19-catalog-perf-benchmark.md  2026-07-19-meshing-rebaseline.md  2026-07-19-somm-session-benchmark.md  2026-07-20-basis-convergence-census.md  2026-07-20-feed-drift-census.md  2026-07-22-basis-census-rerun.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_09cf5dd15dd1d040_discone_py.html  z_09cf5dd15dd1d040_g5rv_py.html  z_09cf5dd15dd1d040_lpda_py.html  z_09cf5dd15dd1d040_t2fd_py.html  z_122e9c9d52f723bf_bowtie_py.html  z_122e9c9d52f723bf_helix_py.html  z_122e9c9d52f723bf_hentenna_py.html  z_122e9c9d52f723bf_hentenna_slant_py.html  z_122e9c9d52f723bf_hourglass_py.html  z_122e9c9d52f723bf_hourglass_slant_py.html  z_14f6d25602e95197___init___py.html  z_14f6d25602e95197_momwire_py.html  z_14f6d25602e95197_pynec_py.html  z_468d792686dd4edf_bobtail_py.html  z_468d792686dd4edf_bruce_py.html  z_468d792686dd4edf_challenger_py.html  z_468d792686dd4edf_dominator_py.html  z_468d792686dd4edf_elt_whip_py.html  z_468d792686dd4edf_four_square_py.html  z_468d792686dd4edf_half_square_py.html  z_468d792686dd4edf_inverted_l_py.html  z_468d792686dd4edf_inverted_l_tmatch_py.html  z_468d792686dd4edf_jpole_py.html  z_468d792686dd4edf_phased_verticals_py.html  z_468d792686dd4edf_pota_performer_py.html  z_468d792686dd4edf_raised_vertical_py.html  z_468d792686dd4edf_rectangle_py.html  z_468d792686dd4edf_right_angle_delta_py.html  z_468d792686dd4edf_tri_moxon_py.html  z_468d792686dd4edf_vertical_py.html  z_6210b0e8046423da_hb9cv_py.html  z_6210b0e8046423da_hexbeam_py.html  z_6210b0e8046423da_moxon_py.html  z_6210b0e8046423da_moxon_turnstile_py.html  z_6210b0e8046423da_owa_yagi_6el_py.html  z_6210b0e8046423da_owa_yagi_py.html  (+103 more)
scripts/: bench_basis_convergence.py  bench_catalog.py  bench_converge.py  bench_delta_a_headroom.py  bench_feed_drift.py  bench_levee_bracket.py  bench_nec_corpus.py  bench_somm_sweep.py  bench_wire_loading.py  generate_catalog.py  measure_solve_memory.py  profile_compare_engines.py  profile_ground_models.py  profile_ws_postproc_serialization.py
site/: astro.config.mjs
site/src/content/docs/: index.mdx
src/antennaknobs/: __init__.py  builder.py  cli.py  core.py  design_data.py  design_screen.py  design_trust.py  drone.py  engine.py  far_field.py  geometry.py  nec_export.py  nec_import.py  network.py  network_reduce.py  serialize.py  smith_chart.py  station.py  sweep.py  terrain.py  user_designs.py
src/antennaknobs/designs/arrays/: bowtiearray.py  bowtiearray1x2.py  bowtiearray2x4.py  delta_looparray.py  delta_looparray_1x4.py  delta_looparray_1x4_grouped.py  delta_looparray_2x2.py  delta_looparray_network.py  delta_looparray_with_tls.py  folded_invveearray.py  hentenna_array.py  hourglass_array.py  invveearray.py  lumped_coupled_pair.py  moxonarray.py  yagiarray.py
src/antennaknobs/designs/beams/: hb9cv.py  hexbeam.py  moxon.py  moxon_turnstile.py  owa_yagi.py  owa_yagi_6el.py  phased_driver_yagi.py  yagi.py
src/antennaknobs/designs/broadband/: discone.py  g5rv.py  lpda.py  t2fd.py
src/antennaknobs/designs/dipoles/: dipole_turnstile.py  folded_invvee.py  folded_invvee_balun.py  invvee.py  invvee_coax_station.py  koch_dipole.py  ocf_dipole.py  pota_invvee.py  short_dipole_loaded.py
src/antennaknobs/designs/loops/: bisquare.py  delta_loop.py  delta_loop_drone.py  delta_loop_flown.py  delta_loop_flyby.py  delta_loop_hoisted.py  delta_loop_marked.py  delta_loop_plane.py  delta_loop_reflected.py  delta_loop_sides.py  delta_loop_slanted.py  delta_loop_solved.py  delta_loop_topdown.py  diamond_loop.py  diamond_loop_turnstile.py  horizontal_loop.py  horizontal_loop_drone.py  (+4 more)
src/antennaknobs/engines/: momwire.py  pynec.py
src/antennaknobs/web/: adapter.py  cost.py  lane.py  server.py  user_designs.py
tests/: conftest.py  test_admittance_branch.py  test_auto_mesh.py  test_bench_basis_convergence.py  test_bench_card_order.py  test_bench_catalog.py  test_bench_converge.py  test_bench_ex6_gyrator.py  test_bench_ex6_superposition.py  test_bench_ex6_tl.py  test_bench_feed_drift.py  test_bench_ground.py  test_catalog_generated.py  test_cebik_designs.py  test_challenger_dominator.py  test_cli.py  test_composite_network.py  test_current_source.py  test_delta_a_lint.py  test_design_schemas.py  test_design_screen.py  test_design_trust.py  test_distributed_port.py  test_drone.py  test_efhw_sloper.py  test_elt_whip.py  test_engine_spec.py  test_finite_ground_zenith.py  test_finite_q.py  test_hexbeam_5band.py  test_ld4_reactive_load.py  test_levee_bracket.py  test_lossy_tl.py  test_momwire_engine.py  test_momwire_finite_ground.py  test_nec_export.py  test_nec_import.py  test_nec_import_anchor.py  test_nec_import_comments.py  test_nec_import_ex6.py  (+37 more)
tests/data/: whip_antenna_8ft_groundplane.nec
(+70 files in other folders)
