[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antennaknobs"
version = "0.16.0"
authors = [
  { name="Steven M. Burns", email="smburns47@gmail.com" },
]
description = "Scriptable antenna design with live, knob-driven tuning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core runtime deps, imported unconditionally:
#   - momwire — the built-in MoM engine (`from momwire import ...` across the
#     engines/CLI). Now that momwire publishes its own wheels, it is a real
#     declared dependency so `pip install antennaknobs` resolves it from the
#     same index. The vendored git submodule remains for co-development (install
#     it editable to override the wheel); a development checkout that does
#     `pip install -e ./momwire` first satisfies this pin and pip won't refetch.
#     IMPORTANT: the floor must name the momwire release that actually carries
#     every momwire API this package uses — dev/CI run the submodule, so ONLY
#     this pin protects PyPI installs and the Fly image. When code starts using
#     a new momwire API, bump the floor in the same PR and confirm that version
#     is on PyPI before tagging a release (v0.13.0 shipped broken because the
#     cancel API existed only in the submodule while the floor allowed 0.2.3).
#   - numpy/scipy math throughout; matplotlib for the draw/sweep/pattern plots;
#     icecream for the CLI/sweep debug tracing; scikit-rf for Touchstone/network
#     handling in sweep.
#
# Deliberately NOT listed: PyNEC — the optional NEC2 backend, GPL-2.0-or-later.
# It is installed separately from the python-necpp fork's release wheel (the
# `pynec-accel` distribution; see README) and must never be declared a
# dependency of this MIT package.
dependencies = [
    "momwire>=0.6.0",
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "icecream>=2.1",
    "scikit-rf>=0.24",
]

[project.optional-dependencies]
# Web UI: src/antennaknobs/web/server.py is a FastAPI app served by uvicorn.
#   - fastapi (+ its starlette core) is the web framework itself — imported
#     directly by antennaknobs/web/server.py, so it must be declared here.
#   - uvicorn[standard] is the ASGI server. The live-solve channel at /ws is a
#     WebSocket upgrade, so the server needs WS support: bare `uvicorn` ships
#     without it and fails the handshake at runtime. `uvicorn[standard]` already
#     pulls in websockets (+ httptools + uvloop, uvloop a no-op on Windows), but
#     we also list `websockets` explicitly so the /ws dependency is visible and
#     pinned even if uvicorn's extra ever changes.
#   - psutil powers _physical_cpu_count() in antennaknobs.web.server — portable across
#     Windows/macOS/Linux. Falls back to os.cpu_count() if missing, which
#     misfires on chips without HT (pins to half the actual cores).
web = ["fastapi", "uvicorn[standard]", "websockets", "psutil"]

# Test suite: `pip install -e ".[test]"` makes `pytest` reproducible from a
# clean clone (the runtime deps in [project] cover numpy/scipy/matplotlib/
# scikit-rf that the solver tests need).
#   - pytest + coverage run the suite.
#   - the web-server tests import the FastAPI app and drive it through
#     Starlette's TestClient, so they need the `web` extra (pulled in via the
#     self-reference below) PLUS an HTTP client for TestClient. starlette>=1
#     imports `httpx2` (it falls back to a deprecated `httpx`), so we pin
#     `httpx2` to get the supported, warning-free path. Without it, the web
#     tests error at collection.
#   - PyNEC is deliberately NOT included (GPL, installed separately per README);
#     the pynec-backed tests skip when it's absent.
test = ["antennaknobs[web]", "pytest", "coverage", "httpx2"]

# Local developer tooling — install with `pip install -e ".[dev]"`.
#   - ruff is the linter/formatter, configured under [tool.ruff] below. It is a
#     purely local convenience: CI lints via astral-sh/ruff-action (.github/
#     workflows/ruff.yml), which installs its own ruff, so ruff is deliberately
#     NOT in [project] or the runtime/test extras — end users and the `.[test]`
#     CI install never pull it in.
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/stevenmburns/antennaknobs"
Issues = "https://github.com/stevenmburns/antennaknobs/issues"

[tool.pytest.ini_options]
# Only discover this project's own suite. Without this, a bare `pytest`
# recurses from the repo root into the momwire submodule's tests, which
# fail to collect (they import momwire's `validation` package, only on-path
# inside the submodule's own setup). CI already passes `tests/` explicitly;
# this makes a bare local `pytest` match, mirroring ruff's momwire exclude.
testpaths = ["tests"]
markers = [
    # Tests that run an antenna solver across a *catalog* of named designs
    # (e.g. tests/test_cebik_designs.py) — the same solve code path repeated
    # design after design. Representative solver/engine coverage stays
    # unmarked and runs on every PR; this marker quarantines the per-design
    # repetition to the full main-only run, so the registry can grow toward
    # many designs without inflating PR feedback. Deselect with
    # `-m "not antenna_computation_check"`.
    "antenna_computation_check: solves a named design as part of broad per-design catalog coverage (run on main, not per-PR)",
]

[tool.ruff]
# momwire is a submodule with its own config.
extend-exclude = ["momwire"]

[tool.ruff.lint]
ignore = ["E741"]
# Keep "imported but unused" as a warning instead of auto-stripping.
# Without this, multi-pass edits (add imports first, then add code that
# uses them) can have the import deleted between edits — by the editor's
# format-on-save, the project's auto-fix hook, or a pre-commit run —
# producing a broken next edit. Manual cleanup of unused imports is fine.
unfixable = ["F401"]
