[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antennaknobs"
version = "0.27.1"
authors = [
  { name="Steven M. Burns", email="smburns47@gmail.com" },
]
description = "Scriptable antenna design with live, knob-driven tuning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core runtime deps, imported unconditionally:
#   - momwire — the built-in MoM engine (`from momwire import ...` across the
#     engines/CLI). Now that momwire publishes its own wheels, it is a real
#     declared dependency so `pip install antennaknobs` resolves it from the
#     same index. The vendored git submodule remains for co-development (install
#     it editable to override the wheel); a development checkout that does
#     `pip install -e ./momwire` first satisfies this pin and pip won't refetch.
#     IMPORTANT: the pin is EXACT (==), not a floor. Dev/CI run the submodule,
#     so ONLY this pin protects PyPI installs and the Fly image — and a floor
#     lets a new momwire release silently change antennaknobs behavior on the
#     next deploy/install (momwire 0.6.0 nearly shipped a multi-second default
#     ground solve that way; a floor also let v0.13.0 ship broken against
#     0.2.3). Every momwire upgrade is a deliberate PR: bump this pin, the
#     Dockerfile pin, and the submodule together, confirm the version is on
#     PyPI before tagging a release.
#   - numpy/scipy math throughout; matplotlib for the draw/sweep/pattern plots
#     including the in-house Smith chart (smith_chart.py — scikit-rf was
#     dropped in #332, it was only ever used to draw that chart). CLI/sweep
#     debug tracing goes through the stdlib logging module (enable with `-vv`).
#
# Deliberately NOT listed: PyNEC — the optional NEC2 backend, GPL-2.0-or-later.
# It is installed separately from the python-necpp fork's release wheel (the
# `pynec-accel` distribution; see README) and must never be declared a
# dependency of this MIT package.
dependencies = [
    "momwire==0.12.0",
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
# Web UI: src/antennaknobs/web/server.py is a FastAPI app served by uvicorn.
#   - fastapi (+ its starlette core) is the web framework itself — imported
#     directly by antennaknobs/web/server.py, so it must be declared here.
#   - uvicorn[standard] is the ASGI server. The live-solve channel at /ws is a
#     WebSocket upgrade, so the server needs WS support: bare `uvicorn` ships
#     without it and fails the handshake at runtime. `uvicorn[standard]` already
#     pulls in websockets (+ httptools + uvloop, uvloop a no-op on Windows), but
#     we also list `websockets` explicitly so the /ws dependency is visible and
#     pinned even if uvicorn's extra ever changes.
#   - psutil powers _physical_cpu_count() in antennaknobs.web.server — portable across
#     Windows/macOS/Linux. Falls back to os.cpu_count() if missing, which
#     misfires on chips without HT (pins to half the actual cores).
#   - threadpoolctl sizes the BLAS/OpenMP pools at runtime in
#     antennaknobs.web.server — env vars are snapshotted by each library at
#     import time, which happens (via antennaknobs/__init__) before server.py
#     can set them (issue #377).
web = ["fastapi", "uvicorn[standard]", "websockets", "psutil", "threadpoolctl"]

# Test suite: `pip install -e ".[test]"` makes `pytest` reproducible from a
# clean clone (the runtime deps in [project] cover the numpy/scipy/matplotlib
# that the solver tests need).
#   - pytest + coverage run the suite.
#   - the web-server tests import the FastAPI app and drive it through
#     Starlette's TestClient, so they need the `web` extra (pulled in via the
#     self-reference below) PLUS an HTTP client for TestClient. starlette>=1
#     imports `httpx2` (it falls back to a deprecated `httpx`), so we pin
#     `httpx2` to get the supported, warning-free path. Without it, the web
#     tests error at collection.
#   - PyNEC is deliberately NOT included (GPL, installed separately per README);
#     the pynec-backed tests skip when it's absent.
test = ["antennaknobs[web]", "pytest", "coverage", "httpx2"]

# Local developer tooling — install with `pip install -e ".[dev]"`.
#   - ruff is the linter/formatter, configured under [tool.ruff] below. It is a
#     purely local convenience: CI lints via astral-sh/ruff-action (.github/
#     workflows/ruff.yml), which installs its own ruff, so ruff is deliberately
#     NOT in [project] or the runtime/test extras — end users and the `.[test]`
#     CI install never pull it in.
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/stevenmburns/antennaknobs"
Issues = "https://github.com/stevenmburns/antennaknobs/issues"

[tool.pytest.ini_options]
# Only discover this project's own suite. Without this, a bare `pytest`
# recurses from the repo root into the momwire submodule's tests, which
# fail to collect (they import momwire's `validation` package, only on-path
# inside the submodule's own setup). CI already passes `tests/` explicitly;
# this makes a bare local `pytest` match, mirroring ruff's momwire exclude.
testpaths = ["tests"]
markers = [
    # Tests that run an antenna solver across a *catalog* of named designs
    # (e.g. tests/test_cebik_designs.py) — the same solve code path repeated
    # design after design. Representative solver/engine coverage stays
    # unmarked and runs on every PR; this marker quarantines the per-design
    # repetition to the full main-only run, so the registry can grow toward
    # many designs without inflating PR feedback. Deselect with
    # `-m "not antenna_computation_check"`.
    "antenna_computation_check: solves a named design as part of broad per-design catalog coverage (run on main, not per-PR)",
    # Benchmark-class validations (thousands-of-segment solves, ~GBs of peak
    # RSS, >>5 s) — NOT unit tests, and NEVER run in CI: one OOM-killed the
    # GitHub runner on top of the catalog lane's accumulated RSS ('runner
    # received a shutdown signal', twice at the same test). The suite-wide
    # rule is that an individual test finishes in ~2 s, 5 s worst case;
    # anything heavier goes here and is run manually after nec-import or
    # engine changes: `python -m pytest -m heavy_mesh`.
    "heavy_mesh: benchmark-sized solve, excluded from CI; run manually",
]

[tool.ruff]
# momwire is a submodule with its own config.
extend-exclude = ["momwire"]

[tool.ruff.lint]
ignore = ["E741"]
# TID252 bans relative imports, scoped (via the negated per-file-ignore
# below) to the design files only. Designs are user-facing exemplars: any
# builtin must keep working verbatim when copied to ~/.antennaknobs/designs/,
# where it is loaded by file path with no package context, so relative
# imports break on the first line. Core modules keep the usual
# relative-intra-package style.
extend-select = ["TID252"]
# Keep "imported but unused" as a warning instead of auto-stripping.
# Without this, multi-pass edits (add imports first, then add code that
# uses them) can have the import deleted between edits — by the editor's
# format-on-save, the project's auto-fix hook, or a pre-commit run —
# producing a broken next edit. Manual cleanup of unused imports is fine.
unfixable = ["F401"]

[tool.ruff.lint.flake8-tidy-imports]
# "all" also bans single-dot imports: a copied design must not assume it has
# sibling modules (the user dir has none).
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Relative imports are banned only under designs/ (see extend-select above).
"!src/antennaknobs/designs/**" = ["TID252"]
